--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,23 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="secondary">
     <ion-title>
-      Tab 1
+    Map Direction
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-item>
+    <ion-label position="floating">Form</ion-label>
+    <ion-input [(ngModel)]="sourceLocation"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">To</ion-label>
+    <ion-input [(ngModel)]="destinationLocation"></ion-input>
+  </ion-item>
+  <ion-button expand="full" color="secondary" (click)="calculateAndDisplayRoute()">Get Direction</ion-button>
+
+  <div #mapElement="" class="map"></div>
+
 </ion-content>
